Minor change to layout, added #page id to correct overflow hidden bug causing display problems in admin view

--- a/sites/all/themes/exchange/theme.css
+++ b/sites/all/themes/exchange/theme.css
@@ -14,16 +14,15 @@ body.pattern5 {background-image:url(images/pattern5.png);}
 #page {
 /*	background:url(images/page-shadow.png) repeat-y top center; */
 	overflow:hidden;
-  padding:0 18px;
 }
 
 #main {
 	background:#ffffff;
 	position:relative;
 	padding:0;
-	overflow:hidden;
 }
 
+/*.overflow{overflow:hidden;position:relative;display:block;}*/
 .main-padding{padding:0 25px 30px 25px;}
 
 @media (max-width:1025px){
